syntax = "proto3";

package com.chicago.dto;

import "common.proto";
import "user.proto";

option java_package = "com.chicago.dto";

message CreateUserRequest
{
    User user = 1;
}

message CreateUserResponse
{
    TransactionError transaction_error = 1;
}

message LoginUserRequest
{
    User user = 1;
}

message LoginUserResponse
{
    TransactionError transaction_error = 1;
}